--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.formatOnSave": true,
   "files.associations": {
-    "*.md": "mdx"
+    // "*.md": "mdx"
   }
+  // "mdx-preview.preview.useVscodeMarkdownStyles": true
 }
